data_fetcher_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-fetcher-deployment
  labels:
    app: data-fetcher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-fetcher-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: data-fetcher-pod
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: data-fetcher
          image: data-fetcher:1.0.0
          resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          ports:
            - containerPort: 8000
              name: http
