crypto-stateful-set.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-headless-service
spec:
  clusterIP: None
  selector:
    app: crypto-db
  ports:
    - port: 5432
      name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: crypto-stateful-set
spec:
  serviceName: crypto-headless-service
  replicas: 1
  selector:
    matchLabels:
      app: crypto-db
  volumeClaimTemplates:
    - metadata:
        name: crypto-db-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500Mi
  template:
    metadata:
      labels:
        app: crypto-db
    spec:
      containers:
        - name: crypto-db
          image: postgres:15.0
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: crypto-db-storage
              mountPath: /var/lib/postgresql/data
