email_service_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  type: ClusterIP
  selector:
    app: email-service-pod
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-deployment
  labels:
    app: email-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: email-service-pod
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: email-service
          image: email-service:1.0.0
          resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          ports:
            - containerPort: 8083
              name: http
