price_aggregator_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-aggregator-service
spec:
  type: ClusterIP
  selector:
    app: price-aggregator-pod
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-aggregator-deployment
  labels:
    app: price-aggregator-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: price-aggregator-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: price-aggregator-pod
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: price-aggregator
          image: price-aggregator:1.0.0
          resources:
            limits:
              memory: "256Mi"
              cpu: "1000m"
            requests:
              cpu: "200m"
              memory: "64Mi"
          ports:
            - containerPort: 8081
              name: http
