user_service_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service-pod
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: user-service-pod
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: user-service
          image: user-service:1.0.0
          resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          ports:
            - containerPort: 8080
              name: http
